<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orcanddwarf"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.sanya.dwarvesvsorcs.MainActivity">
    <!-- Background image from http://www.deviantart.com/art/Orc-VS-Dwarf-107639013 -->


    <!-- Layout for the upper/action layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- The dwarven upper/action layout (Left side) -->

                <LinearLayout
                    style="@style/actionLayout"
                    android:orientation="vertical">

                    <!-- Dwarven resources -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#000000">

                        <TextView
                            style="@style/resourceStyle"
                            android:text="@string/resources" />

                        <TextView
                            android:id="@+id/dwarvenResources"
                            style="@style/resourceStyle"
                            android:text="@string/tenthousand" />

                    </LinearLayout>

                    <!-- Dwarven honor -->

                    <TextView
                        android:id="@+id/dwarvenHonor"
                        style="@style/honorPointsStyle"
                        android:text="@string/zero" />

                    <TextView
                        style="@style/honorTextStyle"
                        android:text="@string/honor" />

                    <!-- Dwarven action buttons -->

                    <Button
                        android:id="@+id/dwarf3"
                        android:tag="3"
                        style="@style/dwarvenButtons"
                        android:onClick="dwarven"
                        android:text="@string/killachieftan" />

                    <Button
                        android:id="@+id/dwarf2"
                        android:tag="2"
                        style="@style/dwarvenButtons"
                        android:onClick="dwarven"
                        android:text="@string/persecuteraiders" />

                    <Button
                        android:id="@+id/dwarf1"
                        android:tag="1"
                        style="@style/dwarvenButtons"
                        android:onClick="dwarven"
                        android:text="@string/slaygrunts" />

                    <Button
                        android:id="@+id/dwarf0"
                        style="@style/dwarvenButtons"
                        android:onClick="dwarvenCollect"
                        android:text="@string/harvest" />

                </LinearLayout>

                <!-- The orcish upper/action layout (Right side) -->

                <LinearLayout
                    style="@style/actionLayout"
                    android:orientation="vertical"
                    android:layout_marginLeft="3dp">

                    <!-- Orcish resources -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#000000">

                        <TextView
                            style="@style/resourceStyle"
                            android:text="@string/resources" />

                        <TextView
                            android:id="@+id/orcishResources"
                            style="@style/resourceStyle"
                            android:text="@string/tenthousand" />

                    </LinearLayout>

                    <!-- Orcish honor -->

                    <TextView
                        android:id="@+id/orcishHonor"
                        style="@style/honorPointsStyle"
                        android:text="@string/zero" />

                    <TextView
                        style="@style/honorTextStyle"
                        android:text="@string/honor" />

                    <!-- Orcish action buttons -->

                    <Button
                        android:id="@+id/orcish3"
                        android:tag="3"
                        style="@style/orcishButtons"
                        android:onClick="orcish"
                        android:text="@string/butchathane" />

                    <Button
                        android:id="@+id/orcish2"
                        android:tag="2"
                        style="@style/orcishButtons"
                        android:onClick="orcish"
                        android:text="@string/razeavillage" />

                    <Button
                        android:id="@+id/orcish1"
                        android:tag="1"
                        style="@style/orcishButtons"
                        android:onClick="orcish"
                        android:text="@string/murderpeons" />

                    <Button
                        android:id="@+id/orcish0"
                        style="@style/orcishButtons"
                        android:onClick="orcishCollect"
                        android:text="@string/extruderesources" />

                </LinearLayout>

            </LinearLayout>

            <!-- Peace treaty button (Reset) -->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:onClick="peaceTreaty"
                android:text="@string/peacetreaty" />

            <!-- The reports appear here -->

            <TextView
                android:id="@+id/report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a0ffffff"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/orcsWon"
                style="@style/victory"
                android:text="@string/orcswon" />

            <TextView
                android:id="@+id/dwarvesWon"
                style="@style/victory"
                android:text="@string/dwarveswon" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
